# spall

./: .gitignore  Cargo.toml  README.md  build.rs  new_compiler.md
demos/basic/: test.sh
demos/basic/common/: randomService.js  weatherService.js
demos/basic/elements/: Button.spall  Counter.spall  NavButton.spall  RenderCounter.spall  Root.spall  ScriptedButton.spall  StyledButton.spall
demos/basic/meta/: index.html
demos/basic/pages/: CounterWorld.spall  Index.spall  RouteParameters.spall  Weather.spall
demos/basic/static/: site.css
runtime/: SpallApp.js  SpallElement.js  SpallPage.js  SpallRenderLogger.js  SpallRenderable.js  SpallRenderer.js  SpallRoutedApp.js  SpallRouter.js  SpallUtils.js  framework.js
spallcomp/: Cargo.toml  build.rs
spallcomp/runtime/: SpallApp.js  SpallPage.js  SpallRenderable.js  SpallRootElement.js  SpallRouter.js
spallcomp/src/: cli.rs  element_compiler.rs  errs.rs  lib.rs  logging.rs  main.rs  project_compiler.rs  project_compiler_new.rs  project_compiler_old.rs  tokeniser.rs
spallinit/: Cargo.toml
spallinit/src/: lib.rs
spallserve/: Cargo.toml
spallserve/src/: lib.rs  main.rs  server.rs  server_options.rs
src/: cli.rs  compilation_settings.rs  compile_file.rs  compile_project.rs  errs.rs  file_compiler.rs  javascript_type.rs  logging.rs  main.rs  parser.rs  project_compiler.rs  scoped_css_compiler.rs  spallrun.rs  tag_attribute.rs  tag_type.rs  tokeniser.rs  tokeniser_new.rs  tokeniser_old.rs
src/common/: tokeniser_utils.rs
src/misc/: mod.rs
src/scoped_css/: compiler.rs  mod.rs  tokeniser.rs
(+21 files in other folders)
